# user-db

./: README.md  pyproject.toml  render-deploy.sh
instance/: bank.sqlite  fbank.sqlite
migrations/versions/: 0902eba450df_add_password_field.py  10842d03fb5a_initial_migration.py  8ad7f7c49ad8_initial_migration.py  b2cdfb234ee4_initial_migration.py  c2967a28c40d_create_user_and_role_tables.py  dbc966e287fb_solucao_dbeaver.py
src/: app.py  config.py  db.py  schema.sql  utils.py  wsgi.py
src/controllers/: auth.py  post.py  role.py  user.py
src/models/: Untitled-1.md  __init__.py  base.py  post.py  user.py
tests/integration/controllers/: conftest.py  test_user.py
tests/unit/: test_utils.py
