[tool.poetry]
name = "dio-bank"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "*"
flask-sqlalchemy = "*"
sqlalchemy = "^2.0.32"
flask-migrate = "*"
flask-jwt-extended = "*"
psycopg2-binary = "*"
gunicorn = "*"
jinja2 = "<3.1"
itsdangerous = "^2.2.0"
flask-bcrypt = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"

[tool.pytest.ini_options]
addopts = "-r, -vvv"
testpaths = [
    "tests",
    "integration",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
